--- a/Backend/templates/create_post.html
+++ b/Backend/templates/create_post.html
@@ -32,10 +32,7 @@
 
     <div class="container">
         <div class="post-container"></div>
-        <form action="/create_post" method="POST">
-            <textarea id="content" name="content" required></textarea>
-            <button type="submit">Submit</button>
-        </form>
+
         <div class="drop-area" id="drop-area">
             <p>Drag & Drop an image or click to select</p>
             <input type="file" id="file-input" accept="image/*" hidden>
@@ -43,8 +40,11 @@
         <div class="image-preview" id="image-preview"></div>
         
         <div class="post-form">
-            
+            {% if current_user.is_authenticated %}
                 <input type="text" id="post-text" placeholder="Write something..." />
+            {% else %}
+                <input type="text" id="post-text" placeholder="Write something..." />
+            {% endif %}
             <button id="create-post">Create a Post!</button>
         </div>
     </div>
