connect functionality4 with flask

--- a/Backend/templates/input.html
+++ b/Backend/templates/input.html
@@ -62,6 +62,18 @@
                         <span>End date</span>
                     </div>
                     <div class="inputBox">
+                        <input type="number" id="budget" name="budget" required>
+                        <span> Budget(BGN)</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="number" id="lowest_rating" name="lowest_rating" required>
+                        <span>Lowest rating for restaurant</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="number" id="highest_rating" name="highest_rating" required>
+                        <span>Highest rating for restaurant</span>
+                    </div>
+                    <div class="inputBox">
                         <input type="submit" value="Submit">
                     </div>
                 </form>
