--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -15,7 +15,7 @@
         <nav>
             <h1 id="title">easyTravel</h1>
             <ul class="nav">
-                <li><a href="{{ url_for('homepage') }}">Home</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <li><a href="/search">Service</a></li>
