--- a/Backend/static/css/login.css
+++ b/Backend/static/css/login.css
@@ -176,6 +176,7 @@ textarea:valid {
 }
 
 .contactForm .inputBox input[type="submit"] {
+    height: 3em;
     margin-top: 1em;
     width: 100%;
     background: #8462D4;
