Finalizing the form

--- a/Backend/templates/input.html
+++ b/Backend/templates/input.html
@@ -66,11 +66,11 @@
                         <span> Budget(BGN)</span>
                     </div>
                     <div class="inputBox">
-                        <input type="number" id="lowest_rating" name="lowest_rating" required>
+                        <input type="number" id="lowest_rating" name="lowest_rating" step="0.1" min="0" max="5" required>
                         <span>Lowest rating for restaurant</span>
                     </div>
                     <div class="inputBox">
-                        <input type="number" id="highest_rating" name="highest_rating" required>
+                        <input type="number" id="highest_rating" name="highest_rating" step="0.1" min="0" max="5" required>
                         <span>Highest rating for restaurant</span>
                     </div>
                     <div class="inputBox">
