--- a/Backend/static/css/style.css
+++ b/Backend/static/css/style.css
@@ -69,31 +69,6 @@ nav {
    
 }
 
-.hotel-gallery {
-    margin-top: 9em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-}
-.hotel-card {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    text-align: center;
-    width: 300px;
-    transition: transform 0.3s ease;
-}
-.hotel-card:hover {
-    transform: scale(1.05);
-}
-.hotel-card img {
-    width: 100%;
-    height: 200px;
-    border-radius: 10px;
-}
 .hero-btn {
     display: inline-block;
     text-decoration: none;
@@ -148,7 +123,6 @@ nav {
     flex-wrap: wrap;
     padding: 50px 20px;
     max-width: 1200px;
-    margin: 0 auto;
     
 }
 
@@ -199,7 +173,7 @@ nav {
     margin: 0;
 }
 .posts {
-    display: inline-block; /* This is fine if you want it inline with other items */
+    display: inline-block; 
     text-decoration: none;
     color: #fff;
     text-align: center;
@@ -213,7 +187,7 @@ nav {
     transition: 1s;
     outline: none;
     margin-right: 1.5em;
-    top: 0; /* Adjust the top value to prevent shifting */
+    top: 0; 
 }  
 .posts:hover{
     border: 1px solid #f44336;
