--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -51,7 +51,40 @@
                 <p></p>
             {% endfor %}
         </div>
+        <div id="reviews-container">
+            <div class="review-card">
+                <p>"This site manages everything so easily! I can make good plans for a vacation with my family."</p>
+                <div class="reviewer-info">
+                   
+                    <div>
+                        <h3 class="reviewer-name">Martin Domovchiev</h3>
+                        <p class="reviewer-role">Content creator</p>
+                    </div>
+                </div>
+            </div>
         
+            <div class="review-card">
+                <p>"I found it hard before to make family reservations for a visit but now I don't have to worry anymore."</p>
+                <div class="reviewer-info">
+                    
+                    <div>
+                        <h3 class="reviewer-name">John Smith</h3>
+                        <p class="reviewer-role">Traveler</p>
+                    </div>
+                </div>
+            </div>
+                
+            <div class="review-card">
+                <p>"I really like to travel with friends and this website makes it so much fun! I enjoy posting my stories."</p>
+                <div class="reviewer-info">
+                    
+                    <div>
+                        <h3 class="reviewer-name">Teodor Simeonov</h3>
+                        <p class="reviewer-role">Finance councelor</p>
+                    </div>
+                </div>
+            </div>
+            <div>
         <div>
             <a href="/create_post" class="posts">See other reviews and posts!</a>
         </div>
