--- a/Backend/templates/about.html
+++ b/Backend/templates/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
-    <title>easyTravel</title>
+    <title>About</title>
     <link rel="icon" href="static/images/eztravels.png" type="image/png">
 </head>
 <body>
